--- a/man/vzubc.8
+++ b/man/vzubc.8
@@ -1,8 +1,8 @@
-.TH vzctl 8 "22 May 2011" "OpenVZ" "Containers"
+.TH vzctl 8 "25 May 2011" "OpenVZ" "Containers"
 .SH NAME
 vzubc \- show User Beancounters in a human-readable format.
 .SH SYNOPSIS
-vzubc [\fIoption\fR ...] [\fIfile\fR] [\fICTID\fR ...]
+vzubc [\fIoption\fR ...] [\fICTID\fR ...]
 .SH DESCRIPTION
 This utility aims to show current values for User Beancounter in
 a human-readable format. Values that are in pages are converted into bytes,
@@ -10,14 +10,11 @@ then long values are converted into kilo-, mega- gigabytes etc.
 For held and maxheld, it shows how close the values are to the barrier and
 to the limit. Zero and unlimited values are shown as \fB-\fR.
 
-One can specify a \fIfile\fR to read User Beancounters from, by default this is
-\fB/proc/bc/resources\fR or, if that one is not available,
-\fB/proc/user_beancounters\fR. Use \fB-\fR to read from standard input.
-
 One or several \fICTID\fRs can be specified to limit the output to the given
 containers. Each \fICTID\fR can be either a name or a numeric ID. Note that
 names can only be used if there is a container on the system with that name
 (\fBvzlist -o ctid\fI name\fR command is used for name to ID conversion).
+Unknown CTIDs are ignored.
 
 The utility can also be used from inside the container, in this case it only
 shows the values for that container (and it doesn't make sense to specify
@@ -73,13 +70,15 @@ Clear all saved held data.
 Enable color highlighting. Not compatible with \fB--watch\fR. Same thresholds
 as for quiet mode are used to highlight "more important" lines, plus the
 lines with non-zero fail counters are highlighted.
+.TP
+\fB-f\fR | \fB--file\fR \fIfilename\fR
+Read User Beancounters from \fIfilename\fR. By default this is
+\fB/proc/bc/resources\fR or, if that one is not available,
+\fB/proc/user_beancounters\fR. Use \fB-\fR to read from standard input.
 .SH EXAMPLES
 .TP
 \fBvzubc 101 web dns\fR
 Show all beancounters for CTID 101 and for CTs named \fBweb\fR and \fRdns\fR.
-.TP
-\fBvzubc myubc mail\fR
-Show beancounters for CT named \fBmail\fR from the file \fBmyubc\fR.
 .TP
 \fBvzubc -w -wd -wn 10 101\fR
 Display beancounters for CT 101 every 10 seconds, highlighting the changes.
