man/vzlist.8: subsections are not ALL CAPS
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzlist.8
+++ b/man/vzlist.8
@@ -28,7 +28,7 @@ Display container names instead of hostnames.
 .IP "\fB-H\fR, \fB--no-header\fR"
 Suppress displaying the header row.
 .IP "\fB-o\fR, \fB--output\fR \fIfield\fR[,\fIfield\fR...]"
-Display only the specified \fIfield\fRs (see \fBSTANDARD FIELDS\fR
+Display only the specified \fIfield\fRs (see \fBStandard fields\fR
 subsection below).
 .IP "\fB-s\fR, \fB--sort\fR [\fB-\fR]\fIfield\fR"
 Sort by the value of \fIfield\fR (possible arguments are the same
@@ -55,7 +55,7 @@ List only containers with descriptions matching the \fIpattern\fR.
 .IP "\fB-L\fR, \fB--list\fR"
 list all available format specifiers.
 
-.SS STANDARD FIELDS
+.SS Standard fields
 
 These may be used to control both output (\fB-o\fR, \fB--output\fR)
 and the sorting order (\fB-s\fR, \fB--sort\fR).
