man/vzubc.8: fix a typo in formatting
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzubc.8
+++ b/man/vzubc.8
@@ -78,7 +78,7 @@ Read User Beancounters from \fIfilename\fR. By default this is
 .SH EXAMPLES
 .TP
 \fBvzubc 101 web dns\fR
-Show all beancounters for CTID 101 and for CTs named \fBweb\fR and \fRdns\fR.
+Show all beancounters for CTID 101 and for CTs named \fBweb\fR and \fBdns\fR.
 .TP
 \fBvzubc -w -wd -wn 10 101\fR
 Display beancounters for CT 101 every 10 seconds, highlighting the changes.
