man/vzctl.8: note about page size
Page size is 4K on both x86 and x86_64.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -190,7 +190,7 @@ and the second is a limit. Each argument is either a number, a number
 with a suffix, or a special value \fBunlimited\fR.
 
 Arguments are in items, pages or bytes. Note that page size
-is architecture-specific, it is 4096 bytes on IA32 platform.
+is architecture-specific, it is 4096 bytes on x86 and x86_64 platforms.
 
 You can also specify different suffixes for \fBset\fR parameters
 (except for the parameters which names start with \fBnum\fR).
