--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -906,9 +906,9 @@ Error saving container configuration file
 Error setting container IO parameters (ioprio)
 .SH EXAMPLES
 To create and start "basic" container with ID of 1000 using
-\fIfedora-core-5\fR OS template and IP address of 192.168.10.200:
+\fBcentos-5\fR OS template and IP address of 192.168.10.200:
 .br
-\f(CR	vzctl create 1000 --ostemplate fedora-core-5 --config basic
+\f(CR	vzctl create 1000 --ostemplate centos-5 --config basic
 .br
 \f(CR	vzctl set 1000 --ipadd 192.168.10.200 --save
 .br
