--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -1,3 +1,11 @@
+.de SS3
+.sp \\n[PD]u
+.ft \\*[HF]
+.ps \\n[PS-SS]u
+.in \\n[IN]u
+.ne (2v + 1u)
+.if \\n[.$] \&\\$*
+..
 .TH vzctl 8 "12 May 2011" "OpenVZ" "Containers"
 .SH NAME
 vzctl \- utility to control an OpenVZ container.
@@ -56,8 +64,7 @@ to the container.
 
 The following parameters can be used with \fBset\fR command.
 
-.TP
-.B Miscellaneous
+.SS3 Miscellaneous
 .TP
 \fB--onboot\fR \fByes\fR | \fBno\fR
 Sets whether the container will be started during system boot.
@@ -104,8 +111,7 @@ Add a textual description for a container.
 Whether to restart a container after applying parameters that require
 the container to be restarted in order to take effect.
 
-.TP
-.B Networking
+.SS3 Networking
 .TP
 \fB--ipadd\fR \fIaddr\fR
 Adds IP address to a given container. Note that this option is incremental, so
@@ -145,8 +151,7 @@ and are automatically generated if not specified.
 Removes virtual Ethernet device from a container. If you want to remove all
 devices, use \fBall\fR.
 
-.TP
-.B veth interface configuration
+.SS3 veth interface configuration
 .PP
 The following options can be used to reconfigure the already-created virtual
 Ethernet interface. To select the interface to configure, use
@@ -179,8 +184,7 @@ and multicast packets);
 By default, this functionality is enabled for all veth devices existing
 inside the Container.
 
-.TP
-.B Resource limits
+.SS3 Resource limits
 .PP
 The following options sets barrier and limit for various user beancounters.
 Each option requires one or two arguments. In case of one argument,
@@ -360,8 +364,7 @@ as 0.
 Note that in order for the value to be shown as total swap space,
 \fB--meminfo\fR parameter should be set to value other than \fBnone\fR.
 
-.TP
-.B CPU fair scheduler parameters
+.SS3 CPU fair scheduler parameters
 .PP
 These parameters control CPU usage by container.
 .TP
@@ -393,8 +396,7 @@ For example, if you want the container to execute on CPUs 0, 1, 2, 7,
 you should pass \fB0-2,7\fR.
 Default value is \fBall\fR (the container can execute on any CPU).
 
-.TP
-.B Memory output parameters
+.SS3 Memory output parameters
 .PP
 This parameter control output of /proc/meminfo inside a container.
 .TP
@@ -419,8 +421,7 @@ Note that if \fB--physpages\fR is set on a VSwap-enabled kernel, it takes
 a precedence over \fB--meminfo\fR, i.e. setting \fB--meminfo\fR does not
 take any effect.
 
-.TP
-.B iptables control parameters
+.SS3 iptables control parameters
 .TP
 \fB--iptables\fR \fIname\fR
 Allow to use the functionality of \fIname\fR iptables module inside
@@ -440,8 +441,7 @@ You can use the following values for \fIname\fR:
 \fBipt_helper\fR, \fBiptable_nat\fR, \fBip_nat_ftp\fR, \fBip_nat_irc\fR,
 \fBipt_REDIRECT\fR, \fBxt_mac\fR, \fBipt_recent\fR, \fBipt_owner\fR.
 
-.TP
-.B Network devices control parameters
+.SS3 Network devices control parameters
 .TP
 \fB--netdev_add\fR \fIname\fR
 move network device from the host system to a specified container
@@ -449,8 +449,7 @@ move network device from the host system to a specified container
 \fB--netdev_del\fR \fIname\fR
 delete network device from a specified container
 
-.TP
-.B Disk quota parameters
+.SS3 Disk quota parameters
 .TP
 \fB--diskquota\fR \fByes\fR | \fBno\fR
 allows to enable or disable disk quota for a container. By default,
@@ -479,14 +478,12 @@ quotas inside the container will not be accounted.
 Note that if you have previously set value of this parameter to \fB0\fR,
 changing it while the container is running will not take effect.
 
-.TP
-.B Mount option
+.SS3 Mount option
 .TP
 \fB--noatime\fR \fByes\fR | \fBno\fR
 Sets noatime flag (do not update inode access times) on filesystem.
 
-.TP
-.B Capability option
+.SS3 Capability option
 .TP
 \fB--capability\fR \fIcapname\fR:\fBon\fR|\fBoff\fR
 Sets a capability for a container. Note that setting capability when
@@ -512,8 +509,7 @@ implications, so do not do it unless you know what you are doing. Also note
 that setting \fBsetpcap:on\fR for a container will most probably lead to
 inability to start it.
 
-.TP
-.B Device access management
+.SS3 Device access management
 .TP
 \fB--devnodes\fR \fIdevice\fR:[\fBr\fR][\fBw\fR][\fBq\fR]|\fBnone\fR
 Give the container an access (\fBr\fR - read, \fBw\fR - write,
@@ -526,8 +522,7 @@ is created in a container by \fBvzctl\fR. Example:
 Give the container an access to a \fBb\fRlock or \fBc\fRharacter device
 designated by its \fImajor\fR and \fIminor\fR numbers. Device file have to be created manually.
 
-.TP
-.B PCI device management
+.SS3 PCI device management
 .TP
 \fB--pci_add\fR [\fIdomain\fR:]\fIbus\fR:\fIslot\fR.\fIfunc\fR
 Give the container an access to a specified PCI device. All numbers are
@@ -540,16 +535,14 @@ Note that \fBvps-pci\fR configuration script is executed by \fBvzctl\fR
 then configuring PCI devices. The script is usually located at
 \fB/usr/lib[64]/vzctl/scripts/\fR.
 
-.TP
-.B Features management
+.SS3 Features management
 .TP
 \fB--features\fR \fIname\fR:\fBon\fR|\fBoff\fR
 Enable or disable a specific container feature.
 Known features are: \fBsysfs\fR, \fBnfs\fR, \fBsit\fR, \fBipip\fR, \fBppp\fR,
 \fBipgre\fR, \fBbridge\fR, \fBnfsd\fR.
 
-.TP
-.B Apply config
+.SS3 Apply config
 .TP
 \fB--applyconfig\fR \fIname\fR
 Read container parameters from the container sample configuration file
@@ -564,8 +557,7 @@ possible value for \fIgroup\fR is \fBname\fR:
 to restore container name based on \fBNAME\fR
 variable in container configuration file.
 
-.TP
-.B I/O priority management
+.SS3 I/O priority management
 .TP
 \fB--ioprio\fR \fIpriority\fR
 Assigns I/O priority to container. \fIPriority\fR range is \fB0-7\fR.
