man/*: more cross-references in SEE ALSO
vzctl, vzmemcheck -> vzubc
vzmemcheck -> vzcfgvalidate

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -6,7 +6,7 @@
 .ne (2v + 1u)
 .if \\n[.$] \&\\$*
 ..
-.TH vzctl 8 "12 May 2011" "OpenVZ" "Containers"
+.TH vzctl 8 "3 Jun 2011" "OpenVZ" "Containers"
 .SH NAME
 vzctl \- utility to control an OpenVZ container.
 .SH SYNOPSIS
@@ -999,6 +999,7 @@ To permanently remove this container:
 .BR vzpid (8),
 .BR vzquota (8),
 .BR vzsplit (8),
+.BR vzubc (8),
 .BR http://wiki.openvz.org/UBC .
 .SH LICENSE
 Copyright (C) 2000-2011, Parallels, Inc. Licensed under GNU GPL.
