--- a/man/vzmemcheck.8
+++ b/man/vzmemcheck.8
@@ -1,4 +1,4 @@
-.TH vzmemcheck 8 "22 Feb 2008" "OpenVZ" "Containers"
+.TH vzmemcheck 8 "3 Jun 2011" "OpenVZ" "Containers"
 .SH NAME
 vzmemcheck \- utility to display information of node memory parameters
 .SH SYNOPSIS
@@ -19,5 +19,8 @@ Without \fB-v\fR option, it will be 1 more line: header line(s),
 the numerator and the denominator of the corresponding fraction.
 .SH DIAGNOSTICS
 Normally, exit status is 0. On error, exit status is 1.
+.SH SEE ALSO
+.BR vzcfgvalidate (8),
+.BR vzubc (8).
 .SH LICENSE
-Copyright (C) 2000-2008, Parallels, Inc. Licensed under GNU GPL.
+Copyright (C) 2000-2011, Parallels, Inc. Licensed under GNU GPL.
