man/vzctl.8: add options for restart command
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -628,7 +628,7 @@ unclean container shutdown.
 Note that this command can lead to execution of \fBstop\fR,
 \fBumount\fR and \fBpostumount\fR action scripts
 (see \fBACTION SCRIPTS\fR below).
-.IP \fBrestart\fR 4
+.IP "\fBrestart\fR [\fB--wait\fR] [\fB--force\fR] [\fB--fast\fR]" 4
 Restarts a container, i.e. stops it if it is running, and starts again.
 Accepts all the \fBstart\fR and \fBstop\fR options.
 
