man/vzctl.8: add chkpnt/restore to SYNOPSYS
Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzctl.8
+++ b/man/vzctl.8
@@ -31,6 +31,9 @@ vzctl \- utility to control an OpenVZ container.
 .OP --force
 .OP --fast
 .SY vzctl
+[\fIflags\fR] \fBchkpnt\fR | \fBrestore\fR
+.OP --dumpfile name
+.SY vzctl
 [\fIflags\fR] \fBset\fR \fICTID\fR
 .OP --save
 .OP --setmode \fBrestart\fR|\fBignore
