man/vzifup-post: fix typesetting
Variable parameters should be typeset using italic not bold.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/man/vzifup-post.8
+++ b/man/vzifup-post.8
@@ -1,4 +1,4 @@
-.TH vzifup-post 8 "12 Oct 2009" "OpenVZ" "Containers"
+.TH vzifup-post 8 "4 Jul 2011" "OpenVZ" "Containers"
 .SH NAME
 vzifup-post \- adds containers' ARP records to the interface.
 .SH SYNOPSIS
@@ -8,11 +8,12 @@ This script adds the appropriate ARP records for containers' IP addresses
 to a network interface \fIDEVICE\fR. This needs to be done on interface start
 and the script is usually called from system networking scripts.
 .SH OPTIONS
-.IP \fBDEVICE\fR
-Network interface, e.g. eth0.
+.TP
+.I DEVICE
+Network interface, e.g. \fBeth0\fR.
 .SH RETURN CODE
 Returns 0 upon success.
 .SH SEE ALSO
 .BR vzctl (8).
 .SH LICENSE
-Copyright (C) 2000-2009, Parallels, Inc. Licensed under GNU GPL.
+Copyright (C) 2000-2011, Parallels, Inc. Licensed under GNU GPL.
